20049
{code}
Welcome to Scala 2.11.8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_77).
Type in expressions for evaluation. Or try :help.

scala> trait T { def copy():Any }
defined trait T

scala> case class A() extends T
<console>:12: error: class A needs to be abstract, since method copy in trait T of type ()Any is not defined
       case class A() extends T
                  ^

{code}

I expect A will implement {{T#copy}} method automatically, however, this does not compile.
